Updates from Overleaf

--- a/Hw1/repo/analysis/output/q3_ols_ehw.tex
+++ b/Hw1/repo/analysis/output/q3_ols_ehw.tex
@@ -1,15 +1,16 @@
 \begin{table}[H]
-\caption{OLS estimation of the inverted logit demand with EHW robust standard errors.}
-\label{tab:q3_ols_ehw}
+\centering
 \begin{tabular}{lcccc}
 \toprule
 Variable & Coef. & Std. Err. (HC1) & t & p-value \\
 \midrule
-price & -0.864*** & 0.020 & -44.052 & 0.000 \\
-weight & 0.006*** & 0.000 & 38.727 & 0.000 \\
-caloriesperg & -1.330*** & 0.039 & -33.701 & 0.000 \\
-sugarperg & 0.004 & 0.279 & 0.013 & 0.989 \\
-proteinperg & 0.106 & 0.210 & 0.504 & 0.614 \\
+Price & -0.864*** & 0.020 & -44.052 & 0.000 \\
+Package size & 0.006*** & 0.000 & 38.727 & 0.000 \\
+Calories per g & -1.330*** & 0.039 & -33.701 & 0.000 \\
+Added sugar per g & 0.004 & 0.279 & 0.013 & 0.989 \\
+Protein per g & 0.106 & 0.210 & 0.504 & 0.614 \\
 \bottomrule
 \end{tabular}
+\caption{OLS estimation of the inverted logit demand (EHW robust SE).}
+\label{tab:q3_ols_ehw}
 \end{table}
