--- a/Hw1/repo/analysis/output/q4_elasticities_city1p1.tex
+++ b/Hw1/repo/analysis/output/q4_elasticities_city1p1.tex
@@ -2,16 +2,16 @@
 \centering
 \caption{Own- and cross-price elasticities in City 1, Period 1 (logit).}
 \label{tab:q4_elasticity_city1p1}
-\begin{tabular}{lrrrrr}
+\begin{tabular}{lrrrrrr}
 \toprule
- & Yoplait & Chobani & Dannon & Stonyfield Farm & Activia \\
+ & Outside Option & Yoplait & Chobani & Dannon & Stonyfield Farm & Activia \\
 \midrule
-Outside Option & 0.1138 & 0.1618 & 0.1264 & 0.0849 & 0.0586 \\
-Yoplait & -0.5728 & 0.1618 & 0.1264 & 0.0849 & 0.0586 \\
-Chobani & 0.1138 & -0.8267 & 0.1264 & 0.0849 & 0.0586 \\
-Dannon & 0.1138 & 0.1618 & -0.8598 & 0.0849 & 0.0586 \\
-Stonyfield Farm & 0.1138 & 0.1618 & 0.1264 & -0.6962 & 0.0586 \\
-Activia & 0.1138 & 0.1618 & 0.1264 & 0.0849 & -0.3665 \\
+Outside Option & 0.0000 & 0.1138 & 0.1618 & 0.1264 & 0.0849 & 0.0586 \\
+Yoplait & 0.0000 & -0.5728 & 0.1618 & 0.1264 & 0.0849 & 0.0586 \\
+Chobani & 0.0000 & 0.1138 & -0.8267 & 0.1264 & 0.0849 & 0.0586 \\
+Dannon & 0.0000 & 0.1138 & 0.1618 & -0.8598 & 0.0849 & 0.0586 \\
+Stonyfield Farm & 0.0000 & 0.1138 & 0.1618 & 0.1264 & -0.6962 & 0.0586 \\
+Activia & 0.0000 & 0.1138 & 0.1618 & 0.1264 & 0.0849 & -0.3665 \\
 \bottomrule
 \end{tabular}
 \end{table}
