--- a/Hw1/repo/paper_slides/code/paper.tex
+++ b/Hw1/repo/paper_slides/code/paper.tex
@@ -129,5 +129,11 @@ We compute $s_{0ct}$ as one minus the sum of inside shares in each market $(c,t)
 
 \input{Hw1/repo/analysis/output/q3_ols_ehw}
 
+
+\subsection*{1.4}
+
+\input{Hw1/repo/analysis/output/q4_elasticities_city1p1}
+
+
 \end{spacing}
 \end{document}
