Updates from Overleaf

--- a/Hw1/repo/paper_slides/code/paper.tex
+++ b/Hw1/repo/paper_slides/code/paper.tex
@@ -135,5 +135,7 @@ We compute $s_{0ct}$ as one minus the sum of inside shares in each market $(c,t)
 \input{Hw1/repo/analysis/output/q4_elasticities_city1p1}
 
 
+\subsection*{1.5}
+
 \end{spacing}
 \end{document}
