Update results using new ols with intercept

--- a/Hw1/repo/analysis/output/q1_city1_period1_table.tex
+++ b/Hw1/repo/analysis/output/q1_city1_period1_table.tex
@@ -2,7 +2,7 @@
 \centering
 \begin{tabular}{lccccccc}
 \toprule
-ID & Name & Price & Share & Size/g & Kcal/g & Sugar/g & Protein/g \\
+ID & Name & Price & Share & Size & Kcal/g & Sugar/g & Protein/g \\
 \midrule
 1 & Yoplait & 0.794 & 0.166 & 170 & 0.882 & 0.076 & 0.035 \\
 2 & Chobani & 1.144 & 0.164 & 150 & 0.533 & 0.000 & 0.093 \\
