--- a/Hw1/repo/analysis/output/q3_ols_ehw.tex
+++ b/Hw1/repo/analysis/output/q3_ols_ehw.tex
@@ -4,13 +4,14 @@
 \toprule
 Variable & Coef. & Std. Err. (HC1) & t & p-value \\
 \midrule
-Price & -0.864*** & 0.020 & -44.052 & 0.000 \\
-Package size & 0.006*** & 0.000 & 38.727 & 0.000 \\
-Calories per g & -1.330*** & 0.039 & -33.701 & 0.000 \\
-Added sugar per g & 0.004 & 0.279 & 0.013 & 0.989 \\
-Protein per g & 0.106 & 0.210 & 0.504 & 0.614 \\
+Intercept & -1.203*** & 0.038 & -32.037 & 0.000 \\
+Price & -0.800*** & 0.020 & -40.239 & 0.000 \\
+Package size & 0.007*** & 0.000 & 41.012 & 0.000 \\
+Calories per g & -0.933*** & 0.041 & -22.934 & 0.000 \\
+Added sugar per g & 6.626*** & 0.354 & 18.700 & 0.000 \\
+Protein per g & 8.761*** & 0.349 & 25.085 & 0.000 \\
 \bottomrule
 \end{tabular}
 \caption{OLS estimation of the inverted logit demand (EHW robust SE).}
 \label{tab:q3_ols_ehw}
-\end{table}
+\\end{table}
