--- a/Hw1/repo/analysis/output/q7_mc_city1p1.tex
+++ b/Hw1/repo/analysis/output/q7_mc_city1p1.tex
@@ -1,16 +1,16 @@
 \begin{table}[H]
 \centering
 \caption{Recovered marginal costs (City 1, Period 1).}
-\label{tab:q7_mc}
-\begin{tabular}{lccc}
+\label{tab:q7_mc_c1t1}
+\begin{tabular}{lcccc}
 \toprule
-Product & Price & Share & Marginal cost $c_j$ \\
+Product & Price & Share & $1/\{\hat\alpha(1-s)\}$ & Marginal cost $c_{jct}$ \\
 \midrule
-Yoplait & 0.794 & 0.166 & -0.593 \\
-Chobani & 1.144 & 0.164 & -0.240 \\
-Dannon & 1.141 & 0.128 & -0.186 \\
-Stonyfield Farm & 0.904 & 0.109 & -0.394 \\
-Activia & 0.492 & 0.138 & -0.850 \\
+Yoplait & 0.794 & 0.166 & 1.387 & -0.593 \\
+Chobani & 1.144 & 0.164 & 1.383 & -0.240 \\
+Dannon & 1.141 & 0.128 & 1.327 & -0.186 \\
+Stonyfield Farm & 0.904 & 0.109 & 1.298 & -0.394 \\
+Activia & 0.492 & 0.138 & 1.342 & -0.850 \\
 \bottomrule
 \end{tabular}
 \end{table}
