Updates from Overleaf

--- a/Hw1/repo/paper_slides/code/paper.tex
+++ b/Hw1/repo/paper_slides/code/paper.tex
@@ -190,21 +190,7 @@ c_j \;=\; p_j \;-\; \frac{1}{\hat\alpha\,(1-s_j)} .
 Plugging in our estimates ($\hat\alpha\simeq 0.8643$) and the observed
 prices and shares in city 1, period 1, we obtain:
 
-\begin{table}[H]\centering
-\caption{Recovered marginal costs (City 1, Period 1)}
-\label{tab:q7_mc}
-\begin{tabular}{lccc}
-\toprule
-Product & Price & Share & Marginal cost $c_j$ \\
-\midrule
-Yoplait          & 0.794 & 0.166 & \textbf{-0.593} \\
-Chobani          & 1.144 & 0.164 & \textbf{-0.240} \\
-Dannon           & 1.141 & 0.128 & \textbf{-0.186} \\
-Stonyfield Farm  & 0.904 & 0.109 & \textbf{-0.394} \\
-Activia          & 0.492 & 0.138 & \textbf{-0.850} \\
-\bottomrule
-\end{tabular}
-\end{table}
+\input{Hw1/repo/analysis/output/q7_mc_city1p1}
 
 Answer: Not all costs are greater than zero; in fact, all recovered costs are
 negative in this simple OLS logit setup. (Note: depending on the estimated
