--- a/Hw1/repo/analysis/output/q3_ols_ehw.tex
+++ b/Hw1/repo/analysis/output/q3_ols_ehw.tex
@@ -14,4 +14,4 @@ Protein per g & 8.761*** & 0.349 & 25.085 & 0.000 \\
 \end{tabular}
 \caption{OLS estimation of the inverted logit demand (EHW robust SE).}
 \label{tab:q3_ols_ehw}
-\\end{table}
+\end{table}
