--- a/Hw1/repo/paper_slides/code/paper.tex
+++ b/Hw1/repo/paper_slides/code/paper.tex
@@ -59,9 +59,9 @@
 
 \begin{spacing}{1.4}
 
-\section{Logit Demand Model with Exogenous Prices}
+\section{Logit Demand Model with exogenous prices}
 
-\subsection*{1.1}
+\subsection*{Question 1}
 
 After normalizing calories, added sugar, and protein by package size, we construct a summary table of products available in city 1 during period 1, see below.
 
@@ -74,7 +74,7 @@ The two most expensive products are Chobani (price = 1.144) and Dannon (price = 
 The two products with the largest market shares are Yoplait (market share = 16.6 \%) and Chobani (market share = 16.4 \%).
 
 
-\subsection*{1.2}
+\subsection*{Question 2}
 
 Let utility be
 \[
@@ -116,7 +116,7 @@ each depending only on product $j$'s own price and characteristics:
 \;}
 \]
 
-\subsection*{1.3}
+\subsection*{Question 3}
 
 Under the assumption $\mathbb{E}[\xi_{jct}\mid p_{jct},X_j]=0$, we estimate the
 inverted logit demand equation
@@ -130,7 +130,7 @@ We compute $s_{0ct}$ as one minus the sum of inside shares in each market $(c,t)
 \input{Hw1/repo/analysis/output/q3_ols_ehw}
 
 
-\subsection*{1.4}
+\subsection*{Question 4}
 
 We have
 
@@ -161,10 +161,10 @@ Table \ref{tab:q4_elasticity_city1p1} reports the own price and cross-price elas
 \input{Hw1/repo/analysis/output/q4_elasticities_city1p1}
 
 
-\subsection*{1.5}
+\subsection*{Question 5}
 \input{Hw1/repo/analysis/output/q5_diversion_city1p1}
 
-\subsection*{1.6}
+\subsection*{Question 6}
 
 For a single-product firm $j$ in market $(c,t)$, profit is
 \[
@@ -187,9 +187,9 @@ c_{jct} = p_{jct} - \frac{1}{\alpha(1-s_{jct})}.
 \]
 
 
-\subsection*{1.7}
+\subsection*{Question 7}
 
-Using the single-product markup formula from 1.6, we have
+Using the single-product markup formula from Question 6, we have
 \[
 c_{jct} = p_{jct} - \frac{1}{\alpha(1-s_{jct})}
 \]
@@ -201,26 +201,101 @@ prices and shares in city 1, period 1, we obtain:
 Answer: Not all costs are greater than zero; in fact, all recovered costs are
 negative in this simple OLS logit setup. 
 
-\subsection*{1.8}
+\subsection*{Question 8}
 
 In the inverted-logit equation
 \(
 \log s_{jct}-\log s_{0ct}=-\alpha p_{jct}+\beta'X_j+\xi_{jct},
 \)
-prices are typically \emph{endogenous}: positive demand shocks $\xi_{jct}$
+prices are typically endogenous: positive demand shocks $\xi_{jct}$
 (brand quality, promotions, shelf placement, etc.) induce firms to raise prices,
 so $\mathrm{Cov}(p_{jct},\xi_{jct})>0$.
 If we estimate by OLS imposing $\mathbb{E}[\xi\mid p,X]=0$,
 the price coefficient $-\alpha$ is biased upward (less negative), hence $\hat\alpha$
-is biased \emph{downward}. Because the implied markup is
+is biased downward. Because the implied markup is
 \(
 p_j-c_j=\frac{1}{\alpha(1-s_j)},
 \)
-a downward-biased $\hat\alpha$ yields \emph{inflated markups} and thus
-\emph{understated marginal costs}, often even negative.
-Therefore, recovering reasonable costs requires valid cost shifters and
-instrumental variables (e.g., rivals' characteristics, distances, fuel costs),
-or a structural supply system with appropriate instruments and ownership.
+a downward-biased $\hat\alpha$ yields over-estimated markups and thus
+under-estimated marginal.
+
+\section{Logit Demand Model with three way fixed effects}
+
+\subsection*{Question 9}
+Consider the inverted-logit estimating equation
+\[
+\log s_{jct}-\log s_{0,ct}
+= -\alpha\,p_{jct} \;+\; \tau_j \;+\; \tau_c \;+\; \tau_t \;+\; \varepsilon_{jct},
+\]
+where $\tau_j$ (product FE), $\tau_c$ (city FE), and $\tau_t$ (period FE) are unrestricted
+additive terms. The product FE absorbs time- and market-invariant quality/brand appeal that
+is typically positively correlated with prices (``high-quality--high-price''), the city FE absorbs
+location-wide demand and cost shifters, and the period FE absorbs aggregate shocks (inflation,
+seasonality, national advertising, etc.). Hence identification of $\alpha$ relies on \emph{within-product}
+price variation across cities and/or periods, purging a large part of the omitted-variable bias present
+in a pooled OLS without FE.
+
+However, the unobserved, market-specific quality $\xi_{jct}$ (e.g., promotion, shelf placement)
+may still be correlated with prices within a market, so three-way FE do not in general solve price
+endogeneity. Instruments or cost shifters are still needed for full identification.
+
+\subsection*{Question 10}
+
+We estimate
+\[
+\log s_{jct}-\log s_{0,ct}
+= -\alpha\,p_{jct} + \tau_j + \tau_c + \tau_t + \varepsilon_{jct}
+\]
+by OLS with Eicker--Huber--White (HC1) standard errors and product/city/period fixed effects.
+Given the FE estimate $\hat\alpha$, market prices $p_{j11}$ and shares $s_{j11}$, own- and
+cross-price elasticities in a multinomial logit are
+\[
+\varepsilon_{jj,11} = \frac{\partial s_{j11}}{\partial p_{j11}}\frac{p_{j11}}{s_{j11}}
+= -\hat\alpha\,p_{j11}\,(1-s_{j11}),
+\qquad
+\varepsilon_{jk,11}
+= \frac{\partial s_{j11}}{\partial p_{k11}}\frac{p_{k11}}{s_{j11}}
+= \hat\alpha\,p_{k11}\,s_{k11} \quad (k\neq j).
+\]
+The diversion ratio from $j$ to $k$ is
+\[
+D_{j\to k,\,11}
+= \frac{-\partial s_{k,11}/\partial p_{j,11}}{-\partial s_{0,11}/\partial p_{j,11}}
+= \frac{s_{k,11}}{1-s_{j,11}}.
+\]
+Relative to the no-FE estimates, $|\hat\alpha|$ typically increases (less attenuation from
+uncontrolled quality), so both own- and cross-price elasticities increase in magnitude, while
+diversion ratios---which depend only on market shares in MNL---remain unchanged.
+
+\subsection*{Question 11}
+
+Under Bertrand competition, the first-order conditions imply
+\[
+s_{ct} = \Delta_{ct}\,(p_{ct}-c_{ct}),
+\quad
+\Delta_{ct} = \hat\alpha \,\Omega \odot \big(\mathrm{diag}(s_{ct})-s_{ct}s_{ct}^\top\big),
+\]
+where $\Omega$ is the ownership matrix and $\odot$ denotes the Hadamard product. Hence
+\[
+\boxed{ \; c_{ct} = p_{ct} - \Delta_{ct}^{-1}\,s_{ct}\; }.
+\]
+If each firm sells a single product ($\Omega=I$), this reduces to
+\[
+p_{jct}-c_{jct}=\frac{s_{jct}}{\hat\alpha\,(1-s_{jct})},
+\qquad
+c_{jct}=p_{jct}-\frac{s_{jct}}{\hat\alpha\,(1-s_{jct})}.
+\]
+Using $\hat\alpha$ from the FE regression and the observed prices and shares in city 1 and
+period 1, we recover $c_{j11}$.
+
+Adding FE often raises implied marginal costs (markups fall with larger $|\hat\alpha|$), but FE
+do not remove within-market price endogeneity, measurement error in prices/shares, potential
+multi-product ownership, or misspecification of demand (IIA). Any of these can still yield
+implausible costs---including negative values (e.g., for Activia in this dataset). This is why FE
+alone may not be sufficient; one typically adds valid cost instruments and, if needed, a random
+coefficients demand system.
+
+
 
 \end{spacing}
 \end{document}
