Updates from Overleaf

--- a/Hw1/repo/paper_slides/code/paper.tex
+++ b/Hw1/repo/paper_slides/code/paper.tex
@@ -267,7 +267,13 @@ diversion ratios---which depend only on market shares in MNL---remain unchanged.
 
 The results are presented below.
 
-\input{}
+\input{Hw1/repo/analysis/output/q10_fe_ols_price}
+
+
+\input{Hw1/repo/analysis/output/q10_elasticities_city1p1_fe}
+
+\input{Hw1/repo/analysis/output/q10_diversion_city1p1_fe}
+
 
 \subsection*{Question 11}
 
