--- a/Hw1/repo/analysis/output/q10_fe_ols_price.tex
+++ b/Hw1/repo/analysis/output/q10_fe_ols_price.tex
@@ -1,5 +1,7 @@
 \begin{table}[H]
 \centering
+\caption{{{caption}}}
+\label{{{label}}}
 \begin{tabular}{lcccc}
 \toprule
 Variable & Coef. & Std. Err. (HC1) & t & p-value \\
@@ -7,6 +9,4 @@ Variable & Coef. & Std. Err. (HC1) & t & p-value \\
 Price & -0.869*** & 0.018 & -48.517 & 0.000 \\
 \bottomrule
 \end{tabular}
-\caption{FE-OLS of the inverted logit demand (HC1; price coefficient only).}
-\label{tab:q10_fe_ols_price}
 \end{table}
