Minor edits with respect to caption

--- a/Hw1/repo/analysis/output/q10_fe_ols_price.tex
+++ b/Hw1/repo/analysis/output/q10_fe_ols_price.tex
@@ -1,7 +1,7 @@
 \begin{table}[H]
 \centering
-\caption{{{caption}}}
-\label{{{label}}}
+\caption{FE-OLS of the inverted logit demand (HC1; price coefficient only).}
+\label{tab:q10_fe_ols_price}
 \begin{tabular}{lcccc}
 \toprule
 Variable & Coef. & Std. Err. (HC1) & t & p-value \\
