--- a/Hw1/repo/analysis/output/q15_recovered_prices_city1p1.tex
+++ b/Hw1/repo/analysis/output/q15_recovered_prices_city1p1.tex
@@ -1,6 +1,6 @@
 \begin{table}[H]
 \centering
-\caption{{{caption}}}
+\caption{Observed vs. recovered equilibrium prices (City 1, Period 1).}
 \begin{tabular}{lccc}
 \toprule
 Product & Observed price & Recovered price & Abs. diff \\
