--- a/Hw1/repo/analysis/output/q16_merger_prices_city1p1.tex
+++ b/Hw1/repo/analysis/output/q16_merger_prices_city1p1.tex
@@ -1,6 +1,6 @@
 \begin{table}[H]
 \centering
-\caption{{{caption}}}
+\caption{Counterfactual merger (Chobani+Dannon), City 1, Period 1.}
 \begin{tabular}{lcccc}
 \toprule
 Product & Old price & New price (merge) & Diff \\
