--- a/Hw1/repo/analysis/output/q17_welfare_products_city1p1.tex
+++ b/Hw1/repo/analysis/output/q17_welfare_products_city1p1.tex
@@ -1,6 +1,6 @@
 \begin{table}[H]
 \centering
-\caption{{{caption}}}
+\caption{Product-level prices, shares and expenditure per capita before vs. after merger (City 1, Period 1).}
 \begin{tabular}{lcccccccc}
 \toprule
 Product & Old price & New price (merge) & Old share & New share & Old p*s & New p*s & \Delta price & \Delta share \\
