--- a/Hw1/repo/analysis/output/q17_welfare_summary_city1p1.tex
+++ b/Hw1/repo/analysis/output/q17_welfare_summary_city1p1.tex
@@ -1,6 +1,6 @@
 \begin{table}[H]
 \centering
-\caption{{{caption}}}
+\caption{Consumer welfare and expenditure per capita before vs. after merger (City 1, Period 1).}
 \begin{tabular}{lcc}
 \toprule
 Metric & Pre-merger & Post-merger \\
