Updates from Overleaf

--- a/Hw1/repo/paper_slides/code/paper.tex
+++ b/Hw1/repo/paper_slides/code/paper.tex
@@ -391,7 +391,7 @@ s_{jct}=s_{g,ct}\,s_{j|g,ct},
 \quad
 s_{j|g,ct}=\frac{\exp(\delta_{jct}/(1-\rho))}{\sum_{k\in g}\exp(\delta_{kct}/(1-\rho))}.
 \]
-The estimating equation that depends only on product $j$’s observables and conditional share is
+The estimating equation that depends only on product $j$'s observables and conditional share is
 \[
 \boxed{\ \log s_{jct}-\log s_{0,ct}
 = -\alpha\,p_{jct}+\rho\log s_{j|g,ct}+x_{j}'\beta+\tau_j+\tau_c+\tau_t+\varepsilon_{jct}\ }.
@@ -427,7 +427,7 @@ Using prices and shares in city 1, period 1 with the IV-FE estimates $(\hat\alph
 All costs are expected to be nonnegative; the cost of Activia should be approximately $0.1957$.
 
 \subsection*{Question 23}
-To simulate a merger between Chobani and Dannon while holding marginal costs fixed, we solve the pricing fixed point with an ownership matrix that sets the two products under common ownership. Prices of the merging products rise because the firm internalizes within-nest cannibalization; rivals’ prices typically increase by strategic complementarity. The table also reports the post-merger prices from the standard logit (Section 3); nested-logit post-merger prices are generally higher when $\hat\rho>0$.
+To simulate a merger between Chobani and Dannon while holding marginal costs fixed, we solve the pricing fixed point with an ownership matrix that sets the two products under common ownership. Prices of the merging products rise because the firm internalizes within-nest cannibalization; rivals' prices typically increase by strategic complementarity. The table also reports the post-merger prices from the standard logit (Section 3); nested-logit post-merger prices are generally higher when $\hat\rho>0$.
 \input{Hw1/repo/analysis/output/q23_nl_merger_prices_city1p1}
 
 \subsection*{Question 24}
