--- a/Hw1/repo/analysis/output/q17_welfare_summary_city1p1.tex
+++ b/Hw1/repo/analysis/output/q17_welfare_summary_city1p1.tex
@@ -1,14 +1,12 @@
 \begin{table}[H]
 \centering
 \caption{Consumer welfare and expenditure per capita before vs. after merger (City 1, Period 1).}
-\begin{tabular}{lcc}
+\begin{tabular}{lccc}
 \toprule
-Metric & Pre-merger & Post-merger \\
+Metric & Pre-merger & Post-merger & Difference \\
 \midrule
-Consumer surplus per capita & 0.304994 & 0.282629 \\
-Total expenditure per capita & 0.733328 & 0.727484 \\
-Difference (post - pre) & -0.022365 & -0.005844 \\
-CS change as \% of pre expenditure & -3.049731 & NaN \\
+Consumer surplus per capita & 0.3141 & 0.2963 & -0.0178 \\
+Total expenditure per capita & 0.6312 & 0.6199 & -0.0112 \\
 \bottomrule
 \end{tabular}
 \label{tab:q17_sum_c1t1}
